Updated page TechDraw CosmeticCircle/de

--- a/wiki/de/TechDraw_CosmeticCircle.html
+++ b/wiki/de/TechDraw_CosmeticCircle.html
@@ -63,17 +63,15 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="Anwendung.2C_Erstellen"></span><span class="mw-headline" id="Anwendung,_Erstellen">Anwendung, Erstellen</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Einen Punkt in einer TechDraw-Ansicht oder in der <a href="../de/3D_View.html" title="3D View/de">3D-Ansicht</a> ausw&auml;hlen.</li>
 <li>Wurde ein Punkt in der 3D-Ansicht ausgew&auml;hlt: Die korrekte TechDraw-Ansicht zur Auswahl hinzuf&uuml;gen, indem sie in der <a href="../de/Tree_View.html" title="Tree View/de">Baumansicht</a> ausgew&auml;hlt wird.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, den Befehl aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_CosmeticCircle.html" title="TechDraw CosmeticCircle">Hilfkreis hinzuf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hilfskreis hinzuf&uuml;gen</b> ausw&auml;hlen.</li></ul></li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Hilfskreis um 1 Punkt</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticCircle.svg&amp;filetimestamp=20240708191327&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticCircle.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Hilfskreis um 1 Punkt</b> ausw&auml;hlen.</li></ul></li>
 <li>Das Aufgaben-Fenster wird ge&ouml;ffnet.</li>
 <li>Wahlweise die Koordinaten des Mittelpunktes, den Radius sowie Start- und Endwinkel des Kreises anpassen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> dr&uuml;cken.</li>
-<li>Ein Hilfskreis wird hinzugef&uuml;gt. Im Falle eines 3D-Mittelpunktes wird der Kreis auf der Projektion des Punktes plaziert.</li></ol>
-</div>
+<li>Ein Hilfskreis wird hinzugef&uuml;gt. Im Falle eines 3D-Mittelpunktes befindet sich der Kreis an der Stelle der Projektion dieses Punktes.</li></ol>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
@@ -146,15 +144,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111231052
+Cached time: 20260111231651
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.173 seconds
-Preprocessor visited node count: 361/1000000
-Post&#8208;expand include size: 29233/2097152 bytes
-Template argument size: 11368/2097152 bytes
+CPU time usage: 0.072 seconds
+Real time usage: 0.101 seconds
+Preprocessor visited node count: 360/1000000
+Post&#8208;expand include size: 29235/2097152 bytes
+Template argument size: 11370/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -162,19 +160,19 @@ Unstrip post&#8208;expand size: 1654/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.370      1 -total
- 24.48%    6.944      1 Template:TechDraw_Tools_navi/de
- 14.08%    3.994      2 Template:Navigation_menu_2
- 13.40%    3.802      2 Template:Docnav/de
- 12.54%    3.559      1 Template:GuiCommand/de
- 11.61%    3.293      4 Template:Button
-  8.25%    2.339      1 Template:Userdocnavi/de
-  7.61%    2.160      2 Template:MenuCommand
-  5.34%    1.516      1 Template:Caption
-  4.71%    1.336      1 Template:Incode
+100.00%   21.032      1 -total
+ 24.24%    5.098      1 Template:TechDraw_Tools_navi/de
+ 14.12%    2.969      2 Template:Navigation_menu_2
+ 10.87%    2.287      2 Template:Docnav/de
+ 10.47%    2.203      1 Template:GuiCommand/de
+ 10.05%    2.114      1 Template:Version/de
+  9.49%    1.996      1 Template:Incode
+  8.30%    1.745      1 Template:Caption
+  6.79%    1.429      1 Template:Userdocnavi/de
+  5.61%    1.180      4 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260111231051 and revision id 1736740. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:322534-0!canonical and timestamp 20260111231651 and revision id 1736745. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
