--- a/wiki/cs/Material_Workbench.html
+++ b/wiki/cs/Material_Workbench.html
@@ -16,9 +16,7 @@
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Material workbench icon</figcaption></figure>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <meta property="mw:PageProp/toc">
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
@@ -214,13 +212,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111231239
+Cached time: 20260111233658
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.126 seconds
-Preprocessor visited node count: 474/1000000
+CPU time usage: 0.101 seconds
+Real time usage: 0.196 seconds
+Preprocessor visited node count: 473/1000000
 Post&#8208;expand include size: 10039/2097152 bytes
 Template argument size: 4023/2097152 bytes
 Highest expansion depth: 7/100
@@ -230,19 +228,19 @@ Unstrip post&#8208;expand size: 6227/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.694      1 -total
- 29.19%    7.499      1 Template:Userdocnavi/cs
- 16.02%    4.116      1 Template:PropertyData
- 11.30%    2.903      1 Template:Navigation_menu_2
- 10.12%    2.600     16 Template:Incode
-  9.04%    2.323      3 Template:Code
-  8.09%    2.078      2 Template:Variable
-  7.48%    1.922      2 Template:Docnav
-  6.33%    1.627      3 Template:MenuCommand
-  5.60%    1.438      1 Template:Version
+100.00%   47.970      1 -total
+ 27.07%   12.985      1 Template:Userdocnavi/cs
+ 12.04%    5.777     16 Template:Incode
+ 11.85%    5.685      2 Template:Docnav
+ 11.19%    5.367      1 Template:PropertyData
+  7.75%    3.719      1 Template:Navigation_menu_2
+  7.65%    3.668      1 Template:Version
+  6.78%    3.254      3 Template:MenuCommand
+  6.53%    3.134      3 Template:Button
+  6.40%    3.072      3 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410505-0!canonical and timestamp 20260111231239 and revision id 1736743. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410505-0!canonical and timestamp 20260111233658 and revision id 1736749. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
