--- a/wiki/cs/Import_Export.html
+++ b/wiki/cs/Import_Export.html
@@ -10,7 +10,7 @@
 <li><a href="../pt/Import_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Import Export (11% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Import_Export.html" class="mw-pt-progress mw-pt-progress--med" title="Importar Exportar (44% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Import_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Import Export (11% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/Import_Export.html" class="mw-pt-progress mw-pt-progress--high" title="&#1048;&#1084;&#1087;&#1086;&#1088;&#1090; &#1080; &#1101;&#1082;&#1089;&#1087;&#1086;&#1088;&#1090; (89% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Import_Export.html" class="mw-pt-progress mw-pt-progress--low" title="&#23548;&#20837;&#23548;&#20986; (11% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Import_Export.html" class="mw-pt-progress mw-pt-progress--med" title="&#12452;&#12531;&#12509;&#12540;&#12488;&#12539;&#12456;&#12463;&#12473;&#12509;&#12540;&#12488; (33% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -21,7 +21,9 @@
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>This page lists the various file formats that FreeCAD can import and export. For completeness the FreeCAD native format is included in the list. Some formats have a related wiki page that can be reached by clicking on the extension in the first column.
 </p>
 <h2><span class="mw-headline" id="Related">Related</span></h2>
@@ -1252,13 +1254,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111235012
+Cached time: 20260111235022
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.177 seconds
-Preprocessor visited node count: 131/1000000
+CPU time usage: 0.098 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 132/1000000
 Post&#8208;expand include size: 7006/2097152 bytes
 Template argument size: 2229/2097152 bytes
 Highest expansion depth: 5/100
@@ -1268,13 +1270,13 @@ Unstrip post&#8208;expand size: 2967/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.197      1 -total
- 70.07%    9.247      1 Template:Userdocnavi/cs
- 27.91%    3.683      2 Template:Docnav
- 25.60%    3.378      1 Template:Navigation_menu_2
+100.00%    8.923      1 -total
+ 69.61%    6.211      1 Template:Userdocnavi/cs
+ 30.65%    2.735      1 Template:Navigation_menu_2
+ 27.22%    2.429      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410512-0!canonical and timestamp 20260111235012 and revision id 1736764. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410512-0!canonical and timestamp 20260111235022 and revision id 1736766. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
