--- a/wiki/cs/Scripts.html
+++ b/wiki/cs/Scripts.html
@@ -64,7 +64,9 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>With Scripting we mean create topological objects using FreeCAD's Python interpreter. FreeCAD could be used as a "very good" replacement of OpenSCAD, mainly because it has a real Python interpreter, that means that it has a real programming language on board, almost everything you could do with the GUI, is doable with a Python Script.
 </p><p>Sadly information about scripting in the documentation, and even in this wiki are scattered around and lacks of "writing" uniformity and most of them are explained in a too technical manner.
 </p>
@@ -506,13 +508,13 @@ This is the complete code example with a decent script docstring following <a re
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111235804
+Cached time: 20260111235812
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.104 seconds
-Real time usage: 0.142 seconds
-Preprocessor visited node count: 504/1000000
+Real time usage: 0.188 seconds
+Preprocessor visited node count: 505/1000000
 Post&#8208;expand include size: 10240/2097152 bytes
 Template argument size: 9477/2097152 bytes
 Highest expansion depth: 5/100
@@ -522,17 +524,17 @@ Unstrip post&#8208;expand size: 39246/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.529      1 -total
- 27.86%    6.835      1 Template:Powerdocnavi/cs
- 20.51%    5.031     12 Template:Code
- 13.98%    3.428      2 Template:Docnav
- 10.86%    2.663      1 Template:TutorialInfo
-  9.91%    2.431     39 Template:Incode
-  8.26%    2.027      1 Template:Navigation_menu_2
-  5.11%    1.254      2 Template:MenuCommand
+100.00%   47.402      1 -total
+ 29.61%   14.035     12 Template:Code
+ 26.18%   12.410      1 Template:Powerdocnavi/cs
+ 11.48%    5.441      1 Template:Navigation_menu_2
+ 10.85%    5.142     39 Template:Incode
+ 10.48%    4.968      2 Template:MenuCommand
+  8.97%    4.250      1 Template:TutorialInfo
+  8.05%    3.818      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410519-0!canonical and timestamp 20260111235804 and revision id 1736776. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410519-0!canonical and timestamp 20260111235812 and revision id 1736778. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
