Created page with "==Úvod=="

--- a/wiki/cs/Introduction_to_Python.html
+++ b/wiki/cs/Introduction_to_Python.html
@@ -24,7 +24,9 @@
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p>This is a short tutorial for those new to <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Python_%28programming_language%29">Python</a>. Python is an open-source, multiplatform <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Programming_language">programming language</a>. It has several features that make it different from other programming languages, and very accessible to new users:
 </p>
 <ul><li>It has been designed to be to readable by human beings, making it relatively easy to learn and understand.</li>
@@ -365,13 +367,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111235857
+Cached time: 20260111235904
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.122 seconds
-Real time usage: 0.268 seconds
-Preprocessor visited node count: 1472/1000000
+CPU time usage: 0.111 seconds
+Real time usage: 0.176 seconds
+Preprocessor visited node count: 1473/1000000
 Post&#8208;expand include size: 17390/2097152 bytes
 Template argument size: 5832/2097152 bytes
 Highest expansion depth: 5/100
@@ -381,19 +383,19 @@ Unstrip post&#8208;expand size: 27143/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   80.292      1 -total
- 22.31%   17.916      1 Template:Powerdocnavi/cs
- 21.18%   17.009     45 Template:Code
-  6.90%    5.544     89 Template:Incode
-  6.56%    5.265      1 Template:VersionMinus
-  4.82%    3.868      1 Template:Caption
-  4.39%    3.528     15 Template:FileName
-  3.95%    3.173      1 Template:VersionPlus
-  3.42%    2.749      9 Template:Top
-  2.87%    2.305      2 Template:Docnav
+100.00%   57.230      1 -total
+ 19.98%   11.433     45 Template:Code
+ 18.07%   10.341      1 Template:Powerdocnavi/cs
+ 12.87%    7.367     15 Template:FileName
+ 11.74%    6.716      9 Template:Top
+  6.02%    3.447     89 Template:Incode
+  4.78%    2.737      1 Template:Navigation_menu_2
+  3.59%    2.053      2 Template:Docnav
+  2.95%    1.691      1 Template:VersionPlus
+  2.61%    1.492      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32637-0!canonical and timestamp 20260111235857 and revision id 1505527. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:32637-0!canonical and timestamp 20260111235904 and revision id 1736781. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
