Created page with "'''Další informace:'''"

--- a/wiki/cs/Manual;What_is_FreeCAD.html
+++ b/wiki/cs/Manual;What_is_FreeCAD.html
@@ -78,11 +78,8 @@
 </p><p>FreeCAD je multiplatformn&iacute; aplikace, kter&aacute; b&#283;&#382;&iacute; na Windows, macOS a Linuxu a je zcela <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Open_source">open-source</a>. To znamen&aacute;, &#382;e je zdarma k pou&#382;it&iacute;, &uacute;prav&aacute;m a distribuci. FreeCAD je vyv&iacute;jen nad&scaron;enou komunitou, nikoli jednou spole&#269;nost&iacute;, co&#382; umo&#382;&#328;uje neust&aacute;l&eacute; vylep&scaron;ov&aacute;n&iacute; a aktualizace.
 </p><p>Tento software obsahuje mnoho komponent s otev&#345;en&yacute;m zdrojov&yacute;m k&oacute;dem a lze ho integrovat do jin&yacute;ch aplikac&iacute;. Je zn&aacute;m&yacute; svou vysokou p&#345;izp&#367;sobitelnost&iacute; a podporuje celou &#345;adu form&aacute;t&#367; soubor&#367;. D&iacute;ky t&eacute;to flexibilit&#283; a siln&eacute; podpo&#345;e ze strany komunity je FreeCAD v&yacute;konn&yacute;m n&aacute;strojem ve sv&#283;t&#283; open source. FreeCAD, kter&yacute; byl vyvinut kolektivn&#283; glob&aacute;ln&iacute; komunitou program&aacute;tor&#367;, nad&scaron;enc&#367; a u&#382;ivatel&#367;, je p&#345;&iacute;kladem spolupracuj&iacute;c&iacute;ho ducha open-source projekt&#367;. Nab&iacute;z&iacute; v&yacute;znamn&eacute; v&yacute;hody, jako je p&#345;izp&#367;sobitelnost a skriptovatelnost, a p&#345;in&aacute;&scaron;&iacute; sofistikovan&eacute; funkce, kter&eacute; se obvykle nach&aacute;zej&iacute; v profesion&aacute;ln&iacute;m softwaru, do dosahu ka&#382;d&eacute;ho u&#382;ivatele, kter&yacute; se zaj&iacute;m&aacute; o 3D modelov&aacute;n&iacute; a design.
 </p><p>Ofici&aacute;ln&iacute; webov&eacute; str&aacute;nky FreeCADu najdete na adrese <a rel="nofollow" class="external free" href="https://freecad.org">https://freecad.org</a>
+</p><p><b>Dal&scaron;&iacute; informace:</b>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Read more:</b>
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><a href="../About_FreeCAD.html" title="About FreeCAD">About FreeCAD</a></li>
 <li><a href="../Feature_list.html" title="Feature list">List of features</a></li>
@@ -99,13 +96,13 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112014701
+Cached time: 20260112014734
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.072 seconds
-Real time usage: 0.120 seconds
-Preprocessor visited node count: 80/1000000
+CPU time usage: 0.054 seconds
+Real time usage: 0.105 seconds
+Preprocessor visited node count: 79/1000000
 Post&#8208;expand include size: 8316/2097152 bytes
 Template argument size: 644/2097152 bytes
 Highest expansion depth: 5/100
@@ -115,13 +112,13 @@ Unstrip post&#8208;expand size: 2900/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.782      1 -total
- 70.45%    9.005      1 Template:Manual:TOC
- 52.28%    6.682      1 Manual:Summary/cs
- 25.64%    3.277      2 Template:Docnav
+100.00%   14.893      1 -total
+ 79.70%   11.870      1 Template:Manual:TOC
+ 63.94%    9.522      1 Manual:Summary/cs
+ 17.93%    2.671      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014701 and revision id 1736860. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410569-0!canonical and timestamp 20260112014734 and revision id 1736862. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
