Created page with "=== Nastavení základních preferencí ==="

--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -109,8 +109,9 @@
 </p>
 <h3><span id="Odinstalov.C3.A1n.C3.AD"></span><span class="mw-headline" id="Odinstalov&aacute;n&iacute;">Odinstalov&aacute;n&iacute;</span></h3>
 <p>V ide&aacute;ln&iacute;m p&#345;&iacute;pad&#283; se s FreeCADem nikdy nebudete cht&iacute;t rozlou&#269;it, ale pokud ho n&#283;kdy budete pot&#345;ebovat odinstalovat, m&#367;&#382;ete si b&yacute;t jisti, &#382;e proces je jednoduch&yacute;. Ve Windows pou&#382;ijte zn&aacute;mou mo&#382;nost &bdquo;odstranit software&ldquo; z ovl&aacute;dac&iacute;ho panelu. U&#382;ivatel&eacute; Linuxu mohou program odinstalovat pomoc&iacute; stejn&eacute;ho spr&aacute;vce softwaru, kter&yacute; pou&#382;ili k jeho instalaci. U&#382;ivatel&eacute; Macu to maj&iacute; nejjednodu&scaron;&scaron;&iacute; &ndash; sta&#269;&iacute; FreeCAD p&#345;et&aacute;hnout ze slo&#382;ky Aplikace do ko&scaron;e.
+</p><p><span id="Setting_basic_preferences"></span>
 </p>
-<h3><span class="mw-headline" id="Setting_basic_preferences">Setting basic preferences</span></h3>
+<h3><span id="Nastaven.C3.AD_z.C3.A1kladn.C3.ADch_preferenc.C3.AD"></span><span class="mw-headline" id="Nastaven&iacute;_z&aacute;kladn&iacute;ch_preferenc&iacute;">Nastaven&iacute; z&aacute;kladn&iacute;ch preferenc&iacute;</span></h3>
 <p>After installing FreeCAD, you'll likely want to personalize it by adjusting some settings. You can find the preference settings in FreeCAD by navigating to <b>Edit &rarr; Preferences</b> in the menu. Below are a few basic settings you might consider modifying right away, but feel free to explore the various pages of preferences to tailor the software to your needs even further.
 </p>
 <h4><span id="General_category.2C_General_tab"></span><span class="mw-headline" id="General_category,_General_tab">General category, General tab</span></h4>
@@ -163,13 +164,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112020939
+Cached time: 20260112020954
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.174 seconds
-Preprocessor visited node count: 128/1000000
+CPU time usage: 0.093 seconds
+Real time usage: 0.142 seconds
+Preprocessor visited node count: 129/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -179,13 +180,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.058      1 -total
- 67.87%    5.469      1 Template:Manual:TOC
- 50.77%    4.091      1 Manual:Summary/cs
- 27.95%    2.252      2 Template:Docnav
+100.00%    7.618      1 -total
+ 70.54%    5.374      1 Template:Manual:TOC
+ 52.24%    3.980      1 Manual:Summary/cs
+ 24.38%    1.857      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020939 and revision id 1736904. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112020954 and revision id 1736906. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
