Created page with "==== Obecné kategorie, karta Obecné ===="

--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -113,8 +113,9 @@
 </p>
 <h3><span id="Nastaven.C3.AD_z.C3.A1kladn.C3.ADch_preferenc.C3.AD"></span><span class="mw-headline" id="Nastaven&iacute;_z&aacute;kladn&iacute;ch_preferenc&iacute;">Nastaven&iacute; z&aacute;kladn&iacute;ch preferenc&iacute;</span></h3>
 <p>Po instalaci FreeCADu budete pravd&#283;podobn&#283; cht&iacute;t prov&eacute;st jeho p&#345;izp&#367;soben&iacute; &uacute;pravou n&#283;kter&yacute;ch nastaven&iacute;. Nastaven&iacute; p&#345;edvoleb najdete ve FreeCADu v menu <b>Upravit &rarr; P&#345;edvolby</b>. N&iacute;&#382;e uv&aacute;d&iacute;me n&#283;kolik z&aacute;kladn&iacute;ch nastaven&iacute;, kter&aacute; m&#367;&#382;ete hned upravit, ale nev&aacute;hejte prozkoumat r&#367;zn&eacute; str&aacute;nky p&#345;edvoleb, abyste software je&scaron;t&#283; v&iacute;ce p&#345;izp&#367;sobili sv&yacute;m pot&#345;eb&aacute;m.
+</p><p><span id="General_category,_General_tab"></span>
 </p>
-<h4><span id="General_category.2C_General_tab"></span><span class="mw-headline" id="General_category,_General_tab">General category, General tab</span></h4>
+<h4><span id="Obecn.C3.A9_kategorie.2C_karta_Obecn.C3.A9"></span><span class="mw-headline" id="Obecn&eacute;_kategorie,_karta_Obecn&eacute;">Obecn&eacute; kategorie, karta Obecn&eacute;</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_GeneralGen.png&amp;filetimestamp=20240613205348&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_GeneralGen.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <ol><li><b>Language</b>: By default, FreeCAD will select your operating system's language, but you have the option to change it. Thanks to the dedication of many contributors, FreeCAD is available in a wide array of languages.</li>
 <li><b>Units</b>: This setting allows you to choose the default units system for your projects.</li></ol>
@@ -164,13 +165,13 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112021127
+Cached time: 20260112021148
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.148 seconds
-Preprocessor visited node count: 129/1000000
+CPU time usage: 0.098 seconds
+Real time usage: 0.146 seconds
+Preprocessor visited node count: 130/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
 Highest expansion depth: 5/100
@@ -180,13 +181,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.404      1 -total
- 65.52%   10.748      1 Template:Manual:TOC
- 51.25%    8.407      1 Manual:Summary/cs
- 31.10%    5.101      2 Template:Docnav
+100.00%    8.836      1 -total
+ 77.33%    6.833      1 Template:Manual:TOC
+ 53.55%    4.732      1 Manual:Summary/cs
+ 19.08%    1.686      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021126 and revision id 1736908. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021148 and revision id 1736910. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
