Created page with "#'''Vytvořit nový dokument při spuštění''': FreeCAD automaticky otevře nový dokument při každém spuštění programu. #'''Možnosti úložiště''': Zde nakonfigurujte nastavení, která vám pomohou obnovit práci v případě selhání systému. #''''Autorství a licence'''': V této oblasti můžete určit nastavení pro nové soubory. Pro usnadnění sdílení zvažte použití liberálnější licence typu copyleft, jako je Creative Commons."

--- a/wiki/cs/Manual;Installing.html
+++ b/wiki/cs/Manual;Installing.html
@@ -123,9 +123,9 @@
 </p>
 <h4><span id="Obecn.C3.A9_kategorie.2C_karta_Dokument"></span><span class="mw-headline" id="Obecn&eacute;_kategorie,_karta_Dokument">Obecn&eacute; kategorie, karta Dokument</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_GeneralDoc.png&amp;filetimestamp=20240613205238&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_GeneralDoc.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
-<ol><li><b>Create a new document at startup</b>: FreeCAD will automatically open a new document each time the program starts.</li>
-<li><b>Storage options</b>: Configure settings here to help you recover your work in the event of a crash.</li>
-<li>'<b>Authoring and license'</b>: In this area, you can determine the settings for new files. To facilitate sharing, consider starting with a more permissive, copyleft license like Creative Commons.</li></ol>
+<ol><li><b>Vytvo&#345;it nov&yacute; dokument p&#345;i spu&scaron;t&#283;n&iacute;</b>: FreeCAD automaticky otev&#345;e nov&yacute; dokument p&#345;i ka&#382;d&eacute;m spu&scaron;t&#283;n&iacute; programu.</li>
+<li><b>Mo&#382;nosti &uacute;lo&#382;i&scaron;t&#283;</b>: Zde nakonfigurujte nastaven&iacute;, kter&aacute; v&aacute;m pomohou obnovit pr&aacute;ci v p&#345;&iacute;pad&#283; selh&aacute;n&iacute; syst&eacute;mu.</li>
+<li>'<b>Autorstv&iacute; a licence'</b>: V t&eacute;to oblasti m&#367;&#382;ete ur&#269;it nastaven&iacute; pro nov&eacute; soubory. Pro usnadn&#283;n&iacute; sd&iacute;len&iacute; zva&#382;te pou&#382;it&iacute; liber&aacute;ln&#283;j&scaron;&iacute; licence typu copyleft, jako je Creative Commons.</li></ol>
 <h4><span id="Display_category.2C_Navigation_tab"></span><span class="mw-headline" id="Display_category,_Navigation_tab">Display category, Navigation tab</span></h4>
 <figure class="mw-default-size mw-halign-none" typeof="mw:File"><a href="../index.php?title=FreeCAD_022_DisplayNav.png&amp;filetimestamp=20240613205221&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_022_DisplayNav.png" decoding="async" width="895" height="935" class="mw-file-element" data-file-width="895" data-file-height="935"></a><figcaption></figcaption></figure>
 <ol><li><b>Zoom at cursor</b>: When enabled, zoom actions center on the mouse cursor. If disabled, zoom focuses on the center of the view.</li>
@@ -167,12 +167,12 @@ As of FreeCAD v0.17.9940, the recommended installation method of any of the abov
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112021354
+Cached time: 20260112021612
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.084 seconds
-Real time usage: 0.136 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.124 seconds
 Preprocessor visited node count: 131/1000000
 Post&#8208;expand include size: 8148/2097152 bytes
 Template argument size: 616/2097152 bytes
@@ -183,13 +183,13 @@ Unstrip post&#8208;expand size: 2777/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.617      1 -total
- 79.49%    7.645      1 Template:Manual:TOC
- 56.99%    5.481      1 Manual:Summary/cs
- 16.88%    1.623      2 Template:Docnav
+100.00%    9.521      1 -total
+ 72.72%    6.924      1 Template:Manual:TOC
+ 52.34%    4.983      1 Manual:Summary/cs
+ 23.16%    2.205      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021354 and revision id 1736915. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410580-0!canonical and timestamp 20260112021611 and revision id 1736918. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
